# collective-intelligence

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: style.yml  test.yml
collective/: agent.py  collective.py  environment.py  trace.py
collectiveintelligence/: __init__.py  environment.py  trace.py
examples/: basic.py
tests/: __init__.py  test_collective.py
