[project]
name = "collectiveintelligence"
version = "0.1.0"
description = "Minimal Swarm Intelligence"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
    "ty>=0.0.1a31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# hatchling configuration
[tool.hatch.version]
path = "collectiveintelligence/__init__.py"


[tool.hatch.build.targets.sdist]
include = [
    "/collectiveintelligence",
    "/README.md",
]
exclude = [
    "/examples",
]

[tool.hatch.build.targets.wheel]
packages = ["collectiveintelligence"]

[tool.ty.rules]
unresolved-import = "warn"
unknown-argument = "warn"

[tool.ty.src]
exclude = ["examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-ra",
    "--quiet",
]
asyncio_mode = "auto"
norecursedirs = [".git", ".tox", "dist", "build", "*.egg", "__pycache__"]

[tool.coverage.run]
source = ["collectiveintelligence"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
